Added weekly summary output using for-loop

--- a/notebooks/02_data_preparation_analysis.ipynb
+++ b/notebooks/02_data_preparation_analysis.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a6f54b40",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "31387ebe",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f4ad53d8",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "690a6954",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
        "4           189.98   202013                  NaN          253.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "cbbe57b0",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "23a1c24b",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "26a3b0cd",
    "metadata": {},
    "outputs": [
@@ -341,6 +341,56 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2fc1eb6",
+   "metadata": {},
+   "source": [
+    "Weekly Summary of cases, vaccinations and deaths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e3375a62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📊 Weekly overview: new cases, vaccinations, and deaths\n",
+      "\n",
+      "Week 202009: 57 new cases | 0 vaccinations | 0 deaths\n",
+      "Week 202010: 377 new cases | 0 vaccinations | 3 deaths\n",
+      "Week 202011: 2265 new cases | 0 vaccinations | 25 deaths\n",
+      "Week 202012: 6558 new cases | 0 vaccinations | 99 deaths\n",
+      "Week 202013: 7345 new cases | 0 vaccinations | 253 deaths\n",
+      "Week 202014: 6024 new cases | 0 vaccinations | 385 deaths\n",
+      "Week 202015: 3600 new cases | 0 vaccinations | 343 deaths\n",
+      "Week 202016: 1837 new cases | 0 vaccinations | 242 deaths\n",
+      "Week 202017: 1167 new cases | 0 vaccinations | 194 deaths\n",
+      "Week 202018: 700 new cases | 0 vaccinations | 90 deaths\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 🔁 Weekly summary for first 10 weeks (loop demonstration)\n",
+    "\n",
+    "print(\"📊 Weekly overview: new cases, vaccinations, and deaths\\n\")\n",
+    "\n",
+    "for i, row in df_merged.iterrows():\n",
+    "    week = row[\"week_str\"]\n",
+    "    new_cases = row[\"new_cases\"]\n",
+    "    vacc = row[\"weekly_vaccinations\"]\n",
+    "    deaths = row[\"weekly_deaths\"]\n",
+    "    \n",
+    "    print(f\"Week {week}: {new_cases} new cases | {vacc} vaccinations | {deaths} deaths\")\n",
+    "    \n",
+    "    if i == 9:  # Limit output to 10 weeks for readability\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "faa6caaa",
    "metadata": {},
    "source": [
@@ -349,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "cc1253b2",
    "metadata": {},
    "outputs": [
@@ -473,7 +523,7 @@
        "4    0.034445  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "b8b2c560",
    "metadata": {},
    "outputs": [],
